Revert "[BUG] lessen the amount the container floats to the right. overflow-y: scroll not required"
This reverts commit eb254f468d57cff2a7ae621a76749a0da3816719.

--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -28,7 +28,7 @@
 
     @include respond-min($screen-phone) {
         left: auto;
-        right: -150px;
+        right: -180px;
         top: 40px;
         width: 400px;
     }
@@ -78,6 +78,7 @@
     float: left;
     max-height: 75vh;
     overflow-x: hidden;
+    overflow-y: scroll;
     width: 100%;
 }
 
